// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderView should cause redirection to the first match view if none was matched 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should pass props to view container 1`] = `
<DocumentFragment>
  <div>
    <div
      class="foo"
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render matched view 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;
